--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-    <link href="css/style copy.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -45,20 +45,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" 
-                            href="index.html">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link " 
-                            href="index copy.html">Home_2</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
 
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_1">About <i
                                 class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Who We Are</a>
+                            <a class="dropdown-item" href="about.html">Who We Are</a>
                             <a class="dropdown-item" href="#">Our Offerings</a>
                             <a class="dropdown-item" href="#">Our Patnerships</a>
                         </div>
@@ -130,26 +124,57 @@
                 <div class="row">
 
                     <div class="col-lg-5 col-12 m-auto">
-                        <div class="hero-text">
-                            <div data-aos="fade-up" data-aos-duration="3000">
-                                <h1 class="text-white mb-4"><b class="text-info">Engineering Change</b></h1>
-                            </div>
 
-                            <div data-aos="fade-down" data-aos-duration="3000">
-                                <a href="#section_2" class="custom-link bi-arrow-down arrow-icon"></a>
+                        <div class="slider">
+                            <div data-aos="fade-up" data-aos-duration="3000">
+                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <div class="carousel_content">
+                                                <h2>Technology Staffing as Service</h2>
+                                                <p class="d-block  h-50"> Dynato Consulting Services (DCS) offers a wide
+                                                    range of IT service and management solutions such as on-premises and
+                                                    public cloud solutions</p>
+                                                <a class="custom-btn btn custom-link mt-3" href="TechnologyService.html">Explore
+                                                    More</a>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="carousel_content">
+                                                <h2>IT Management as Service</h2>
+                                                <p class="d-block">Dynato consulting services is a startup established
+                                                    in 2020 as a division of Dynato LLC. With a strong knowledge of
+                                                    present-day IT business. </p>
+                                                    <a class="custom-btn btn custom-link mt-3" href="TechnologyService.html">Explore
+                                                        More</a>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="carousel_content">
+                                                <h2>Cloud Management as Service</h2>
+                                                <p class="d-block"> Dynato has successfully partnered with many IT
+                                                    consulting firms and collaborated with industry-leading technology
+                                                    providers and implementation partners to streamline IT management.
+                                                </p>
+                                                <a class="custom-btn btn custom-link mt-3" href="TechnologyService.html">Explore
+                                                    More</a>
+                                                </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <div class="video-wrap">
-                <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                    <source src="videos/video.mp4" type="video/mp4">
+                    <div class="video-wrap">
+                        <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                            <source src="videos/video.mp4" type="video/mp4">
 
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
         </section>
 
         <section class="hero"></section>
@@ -164,7 +189,7 @@
 
                     <div class="col-lg-10 col-12">
                         <div data-aos="fade-right">
-                            <h2 class="mb-4">Our <b class="text-info">Consultancy</b></h2>
+                            <h2 class="mb-4">Our <b class="text_color">Consultancy</b></h2>
                         </div>
                     </div>
 
@@ -176,7 +201,7 @@
                                 ut
                                 dolore</p>
 
-                            <a class="custom-btn btn custom-link mt-3" href="#section_4">About Us</a>
+                            <a class="custom-btn btn custom-link mt-3" href="about.html">About Us</a>
                         </div>
                     </div>
 
@@ -204,7 +229,7 @@
                     <div class="col-lg-4 col-12 d-flex flex-column justify-content-center align-items-center">
                         <div data-aos="zoom-in-right">
                             <div class="speakers-text-info">
-                                <h2 class="mb-4">Our <b class="text-info"> Focused Areas </b></h2>
+                                <h2 class="mb-4">Our <b class="text_color"> Focused Areas </b></h2>
 
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt
@@ -376,7 +401,7 @@
 
                     <div class="col-lg-12 col-12">
                         <div data-aos="fade-up">
-                            <h2 class="mb-5 text-center">Our <b class="text-info">Industries</b></h2>
+                            <h2 class="mb-5 text-center">Our <b class="text_color">Industries</b></h2>
                             <nav>
                                 <div class="nav nav-tabs align-items-baseline" id="nav-tab" role="tablist">
                                     <button class="nav-link active" id="nav-DayOne-tab" data-bs-toggle="tab"
@@ -569,7 +594,7 @@
                     <div class="col-lg-6">
                         <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
-                            <h2 class="text-white mb-4">Our <b class="text-info"> Testimonials </b> </h2>
+                            <h2 class="text-white mb-4">Our <b class="text_color"> Testimonials </b> </h2>
 
                             <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                 eiusmod
@@ -581,7 +606,8 @@
                         <!-- Carousel wrapper -->
                         <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
-                            <div id="carouselExampleControls" ride="true" class="carousel slide" data-bs-ride="carousel">
+                            <div id="carouselExampleControls" ride="true" class="carousel slide"
+                                data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <div class="row d-flex justify-content-center">
@@ -631,7 +657,7 @@
                                             <li><i class="far fa-star fa-sm"></i></li>
                                         </ul>
                                     </div>
-                                 
+
                                     <div class="carousel-item">
 
                                         <div class="row d-flex justify-content-center">
@@ -660,17 +686,19 @@
                                             <li><i class="far fa-star fa-sm"></i></li>
                                         </ul>
                                     </div>
-                                  
+
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Previous</span>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Next</span>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
                                 </button>
-                              </div>
+                            </div>
                         </div>
                         <!-- Carousel wrapper -->
                     </div>
