uploaded_new_images

--- a/TechnologyService.html
+++ b/TechnologyService.html
@@ -120,7 +120,7 @@
        <div class="text-about">
          <h3>Technology Staffing as Service</h3>
        </div>
-       <img src="images/slider/pic_1.jpg" sizes="780px" alt="" width="1520" height="980">
+       <img src="images/services/service_19.jpg" sizes="780px" alt="" width="1520" height="980">
 
     </div>
 
@@ -139,7 +139,7 @@
             <div class="conatiner section-service">
                 <div class="row ">
                     <div class="col-lg-6">
-                        <img src="images/slider/pic_1.jpg" alt="" width="100%">
+                        <img src="images/services/service_20.jpg" alt="" width="100%">
                     </div>
                     <div class="col-lg-6 mt-5 mt-lg-0 section-service-content">
                         <h4>Tech talent Qualities</h4>
@@ -159,7 +159,7 @@
                         </p>
                         </div>
                     <div class="col-lg-6">
-                        <img src="images/slider/pic_1.jpg" alt="" width="100%">
+                        <img src="images/services/service_21.jpg" alt="" width="100%">
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
             <div class="conatiner section-service">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="images/slider/pic_1.jpg" alt="" width="100%">
+                        <img src="images/services/service_22.jpg" alt="" width="100%">
                     </div>
                     <div class="col-lg-6 mt-5 mt-lg-0 section-service-content">
                          <h4>On-Demand Talent Availability</h4>
