--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a class="nav-link click-scroll" href="#section_3">Services <i
                                 class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Technology Staffing as Service (TSaS)</a>
+                            <a class="dropdown-item" href="TechnologyService.html">Technology Staffing as Service (TSaS)</a>
                             <a class="dropdown-item" href="#">IT Management as Service (IMaS)</a>
                             <a class="dropdown-item" href="#">Cloud Management as Service (CMaS)</a>
                             <a class="dropdown-item" href="#">Implementation & support solutions</a>
@@ -247,12 +247,12 @@
                                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active" data-slide-number="0">
-                                            <img src="images/slider/pic_1.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic_9.jpg" class="d-block w-100" alt="..."
                                                 data-remote="" data-type="image" data-toggle="lightbox"
                                                 data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Cloud Computing</h5>
+                                                <h5 class="speakers-title mb-0">Technology Staffing as a Service</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -263,12 +263,12 @@
 
                                         </div>
                                         <div class="carousel-item" data-slide-number="1">
-                                            <img src="images/slider/pic_2.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic_6.jpg" class="d-block w-100" alt="..."
                                                 data-remote="" data-type="image" data-toggle="lightbox"
                                                 data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Cloud Computing</h5>
+                                                <h5 class="speakers-title mb-0">IT Management as a Service</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -279,12 +279,12 @@
 
                                         </div>
                                         <div class="carousel-item" data-slide-number="2">
-                                            <img src="images/slider/pic_3.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic_4.jpg" class="d-block w-100" alt="..."
                                                 data-remote="https://source.unsplash.com/qlYQb7B9vog/" data-type="image"
                                                 data-toggle="lightbox" data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Automation</h5>
+                                                <h5 class="speakers-title mb-0">Cloud Management as a Service</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -295,12 +295,12 @@
 
                                         </div>
                                         <div class="carousel-item" data-slide-number="3">
-                                            <img src="images/slider/pic_4.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic_11.jpg" class="d-block w-100" alt="..."
                                                 data-remote="https://source.unsplash.com/QfEfkWk1Uhk/" data-type="image"
                                                 data-toggle="lightbox" data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Artificial Intelligence</h5>
+                                                <h5 class="speakers-title mb-0">Implementation & Support Solution</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -316,7 +316,7 @@
                                                 data-toggle="lightbox" data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Application Engineering</h5>
+                                                <h5 class="speakers-title mb-0">Digital operations & Transformation Consulting</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -327,12 +327,12 @@
 
                                         </div>
                                         <div class="carousel-item" data-slide-number="5">
-                                            <img src="images/slider/pic_6.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic_10.jpg" class="d-block w-100" alt="..."
                                                 data-remote="https://source.unsplash.com/a_xa7RUKzdc/" data-type="image"
                                                 data-toggle="lightbox" data-gallery="example-gallery">
                                             <div class="speakers-info">
 
-                                                <h5 class="speakers-title mb-0">Digital Operations</h5>
+                                                <h5 class="speakers-title mb-0">Product Development</h5>
 
                                                 <p class="speakers-text mb-0">We enable you to unlock the transformative
                                                     potential of cloud to drive business processes and improve business
@@ -359,19 +359,19 @@
                                                 <div id="carousel-selector-0"
                                                     class="thumb col-4 col-sm-2 px-1 py-2 selected"
                                                     data-target="#myCarousel" data-slide-to="0">
-                                                    <img src="images/slider/pic_1.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic_9.jpg" class="img-fluid" alt="...">
                                                 </div>
                                                 <div id="carousel-selector-1" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="1">
-                                                    <img src="images/slider/pic_2.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic_6.jpg" class="img-fluid" alt="...">
                                                 </div>
                                                 <div id="carousel-selector-2" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="2">
-                                                    <img src="images/slider/pic_3.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic_4.jpg" class="img-fluid" alt="...">
                                                 </div>
                                                 <div id="carousel-selector-3" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="3">
-                                                    <img src="images/slider/pic_4.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic_11.jpg" class="img-fluid" alt="...">
                                                 </div>
                                                 <div id="carousel-selector-4" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="4">
@@ -379,7 +379,7 @@
                                                 </div>
                                                 <div id="carousel-selector-5" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="5">
-                                                    <img src="images/slider/pic_6.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic_10.jpg" class="img-fluid" alt="...">
                                                 </div>
                                             </div>
                                         </div>
