--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
                                         </div>
                                         <div class="carousel-item" data-slide-number="2">
-                                            <img src="images/slider/pic_4.jpg" class="d-block w-100" alt="..."
+                                            <img src="images/slider/pic004.jpg" class="d-block w-100" alt="..."
                                                 data-remote="https://source.unsplash.com/qlYQb7B9vog/" data-type="image"
                                                 data-toggle="lightbox" data-gallery="example-gallery">
                                             <div class="speakers-info">
@@ -367,7 +367,7 @@
                                                 </div>
                                                 <div id="carousel-selector-2" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="2">
-                                                    <img src="images/slider/pic_4.jpg" class="img-fluid" alt="...">
+                                                    <img src="images/slider/pic004.jpg" class="img-fluid" alt="...">
                                                 </div>
                                                 <div id="carousel-selector-3" class="thumb col-4 col-sm-2 px-1 py-2"
                                                     data-target="#myCarousel" data-slide-to="3">
@@ -483,7 +483,7 @@
                                     aria-labelledby="nav-DayTwo-tab">
                                     <div class="row border-bottom pb-5 mb-5">
                                         <div class="col-lg-4 col-12">
-                                            <img src="images/slider/pic_4.jpg" class="schedule-image img-fluid" alt="">
+                                            <img src="images/slider/pic005.jpg" class="schedule-image img-fluid" alt="">
                                         </div>
 
                                         <div class="col-lg-8 col-12 mt-3 mt-lg-0">
@@ -510,7 +510,7 @@
                                     aria-labelledby="nav-DayThree-tab">
                                     <div class="row border-bottom pb-5 mb-5">
                                         <div class="col-lg-4 col-12">
-                                            <img src="images/slider/pic_6.jpg" class="schedule-image img-fluid" alt="">
+                                            <img src="images/slider/pic004.jpg" class="schedule-image img-fluid" alt="">
                                         </div>
 
                                         <div class="col-lg-8 col-12 mt-3 mt-lg-0">
@@ -536,7 +536,7 @@
                                     <div class="row">
 
                                         <div class="col-lg-4 col-12">
-                                            <img src="images/slider/pic_1.jpg" class="schedule-image img-fluid" alt="">
+                                            <img src="images/slider/pic008.jpg" class="schedule-image img-fluid" alt="">
                                         </div>
 
                                         <div class="col-lg-8 col-12 mt-3 mt-lg-0">
@@ -560,7 +560,7 @@
                                     <div class="row">
 
                                         <div class="col-lg-4 col-12">
-                                            <img src="images/slider/pic_2.jpg" class="schedule-image img-fluid" alt="">
+                                            <img src="images/slider/pic003.jpg" class="schedule-image img-fluid" alt="">
                                         </div>
 
                                         <div class="col-lg-8 col-12 mt-3 mt-lg-0">
