--- a/TechnologyService.html
+++ b/TechnologyService.html
@@ -55,9 +55,9 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_1">About <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Who We Are</a>
-                            <a class="dropdown-item" href="#">Our Offerings</a>
-                            <a class="dropdown-item" href="#">Our Patnerships</a>
+                            <a class="dropdown-item" href="about.html#section_1">Who We Are</a>
+                            <a class="dropdown-item" href="about.html#section_2">Our Offerings</a>
+                            <a class="dropdown-item" href="about.html#section_3">Our Patnerships</a>
                         </div>
                     </div>
 
@@ -120,7 +120,7 @@
        <div class="text-about">
          <h3>Technology Staffing as Service</h3>
        </div>
-       <img src="images/services/service_19.jpg" sizes="780px" alt="" width="1520" height="980">
+       <img src="images/services/service_23.jpg" sizes="780px" alt="" width="1520" height="980">
 
     </div>
 
