--- a/about.html
+++ b/about.html
@@ -51,11 +51,11 @@
                   
 
                     <div class="nav-item dropdown">
-                        <a class="nav-link click-scroll" href="#section_1">About <i class="symbol bi bi-chevron-down"></i></a>
+                        <a class="nav-link click-scroll" href="">About <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Who We Are</a>
-                            <a class="dropdown-item" href="#">Our Offerings</a>
-                            <a class="dropdown-item" href="#">Our Patnerships</a>
+                            <a class="dropdown-item" href="#section_1">Who We Are</a>
+                            <a class="dropdown-item" href="#section_2">Our Offerings</a>
+                            <a class="dropdown-item" href="#section_3">Our Patnerships</a>
                         </div>
                     </div>
 
@@ -119,7 +119,7 @@
          <h3>About Us</h3>
        </div>
        <div class="picture justify-content-center">
-       <img src="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70" srcset="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70 780w, https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=1560&amp;q=70 1560w" sizes="780px" alt="" width="1520" height="980">
+       <img src="images/imgs.jpg"  height="400" >
        </div>
     </div>
 
@@ -130,28 +130,28 @@
       </p>
     </div>
 
-      <div class="who-we-are">
+      <div class="who-we-are" id="section_1">
         <h4>Who We Are</h4>
         <br>
         <p>
             With the great mix of young and expert tech talent in the industry, we promise our clients to achieve dynamic, faster, quality, and sustainable results through our partnership. Our business core values innovation, integrity, strategy, and purpose are highly aligned with most of our client's work culture, which creates a healthy environment & partnership between Dynato and our clients.
         </p>
-        <img src="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70" srcset="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70 780w, https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=1560&amp;q=70 1560w" sizes="780px" alt="" width="1520" height="980">
+        <img src="images/whowe.jpg" height="980">
 
       </div>
      
-      <div class="patnerships">
+      <div class="patnerships" id="section_3">
         <h4>Patnerships</h4>
         <br>
         <p>
             Dynato has successfully partnered with many IT consulting firms and collaborated with industry-leading technology providers and implementation partners to streamline IT management and support of existing IT businesses & digital transformations of companies.
         </p>
 
-        <img src="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70" srcset="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70 780w, https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=1560&amp;q=70 1560w" sizes="780px" alt="" width="1520" height="980">
+        <img src="images/partnership.jpg" height="980">
 
       </div>
 
-      <div class="offerings">
+      <div class="offerings" id="section_2">
         <h4>Offerings</h4>
         <br>
         <p>
@@ -160,7 +160,7 @@ Through Dynato, our partners and clients can access a wide range of technical ex
 
         </p>
 
-        <img src="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70" srcset="https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=780&amp;q=70 780w, https://eep.io/images/yzco4xsimv0y/6aZY89JahywcsYcUkC6seq/88f9ad3c2c5004fd2166b1b5b7ee6567/hero_our-story.jpg?w=1560&amp;q=70 1560w" sizes="780px" alt="" width="1520" height="980">
+        <img src="images/offerings.jpg" height="980">
       </div>
 
     </div>
