--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_1">About <i
                                 class="symbol bi bi-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a class="dropdown-item" href="about.html">Who We Are</a>
-                            <a class="dropdown-item" href="#">Our Offerings</a>
-                            <a class="dropdown-item" href="#">Our Patnerships</a>
-                        </div>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="about.html#section_1">Who We Are</a>
+                            <a class="dropdown-item" href="about.html#section_2">Our Offerings</a>
+                            <a class="dropdown-item" href="about.html#section_3">Our Patnerships</a>
+                                </div>
                     </div>
 
                     <div class="nav-item dropdown">
