--- a/TechnologyService.html
+++ b/TechnologyService.html
@@ -64,12 +64,12 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_2">Capabilities <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Cloud services</a>
-                            <a class="dropdown-item" href="#">Automation and Dev-ops practices</a>
-                            <a class="dropdown-item" href="#">IT Infrastructure services</a>
-                            <a class="dropdown-item" href="#">Enterprise software Solutions</a>
-                            <a class="dropdown-item" href="#">Data Analytics & Engineering</a>
-                            <a class="dropdown-item" href="#">Digital Transformation</a>
+                            <a class="dropdown-item" href="capabilities/cloudservices.html">Cloud services</a>
+                            <a class="dropdown-item" href="capabilities/AutomationandDevops.html">Automation and Dev-ops practices</a>
+                            <a class="dropdown-item" href="capabilities/ITInfrastructureservices.html">IT Infrastructure services</a>
+                            <a class="dropdown-item" href="capabilities/Enterprisesoftwaresolutions.html">Enterprise software Solutions</a>
+                            <a class="dropdown-item" href="capabilities/DataAnalyticsEngineering.html">Data Analytics & Engineering</a>
+                            <a class="dropdown-item" href="capabilities/DigitalTransformation.html">Digital Transformation</a>
                         </div>
                     </div>
 
@@ -78,25 +78,25 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_3">Services <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Technology Staffing as Service (TSaS)</a>
-                            <a class="dropdown-item" href="#">IT Management as Service (IMaS)</a>
-                            <a class="dropdown-item" href="#">Cloud Management as Service (CMaS)</a>
-                            <a class="dropdown-item" href="#">Implementation & support solutions</a>
-                            <a class="dropdown-item" href="#">Digital operations & Transformation Consulting</a>
-                            <a class="dropdown-item" href="#">Product Development</a>
+                            <a class="dropdown-item" href="TechnologyService.html">Technology Staffing as Service (TSaS)</a>
+                            <a class="dropdown-item" href="ITManagement">IT Management as Service (IMaS)</a>
+                            <a class="dropdown-item" href="CloudManagement">Cloud Management as Service (CMaS)</a>
+                            <a class="dropdown-item" href="ImplementationSupport">Implementation & support solutions</a>
+                            <a class="dropdown-item" href="DigitalOperations">Digital operations & Transformation Consulting</a>
+                            <a class="dropdown-item" href="ProductDevelopment">Product Development</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_4">Industries <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Technology</a>
-                            <a class="dropdown-item" href="#">Tele communications & Media</a>
-                            <a class="dropdown-item" href="#">Health care</a>
-                            <a class="dropdown-item" href="#">Energy & Utility</a>
-                            <a class="dropdown-item" href="#">Health Care & Pharma</a>
-                            <a class="dropdown-item" href="#">BFSI</a>
-                            <a class="dropdown-item" href="#">Government </a>
+                            <a class="dropdown-item" href="Industries/Technology.html">Technology</a>
+                            <a class="dropdown-item" href="Industries/Telecommunications.html">Tele communications & Media</a>
+                            <a class="dropdown-item" href="Industries/Healthcare.html">Health care</a>
+                            <a class="dropdown-item" href="Industries/EnergyUtility.html">Energy & Utility</a>
+                            <a class="dropdown-item" href="Industries/Healthcare.html">Health Care & Pharma</a>
+                            <a class="dropdown-item" href="Industries/Bankingservices.html">BFSI</a>
+                            <a class="dropdown-item" href="Industries/">Government </a>
                         </div>
                     </div>
 
