updated nav links

--- a/capabilities/AutomationandDevops.html
+++ b/capabilities/AutomationandDevops.html
@@ -90,13 +90,12 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_4">Industries <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="Industries/Technology.html">Technology</a>
-                            <a class="dropdown-item" href="Industries/Telecommunications.html">Tele communications & Media</a>
-                            <a class="dropdown-item" href="Industries/Healthcare.html">Health care</a>
-                            <a class="dropdown-item" href="Industries/EnergyUtility.html">Energy & Utility</a>
-                            <a class="dropdown-item" href="Industries/Healthcare.html">Health Care & Pharma</a>
-                            <a class="dropdown-item" href="Industries/Bankingservices.html">BFSI</a>
-                            <a class="dropdown-item" href="Industries/">Government </a>
+                            <a class="dropdown-item" href="../Industries/Technology.html">Technology</a>
+                            <a class="dropdown-item" href="../Industries/Telecommunications.html">Tele communications & Media</a>
+                            <a class="dropdown-item" href="../Industries/Healthcare.html">Health care</a>
+                            <a class="dropdown-item" href="../Industries/EnergyUtility.html">Energy & Utility</a>
+                            <a class="dropdown-item" href="../Industries/Bankingservices.html">BFSI</a>
+                            <a class="dropdown-item" href="../Industries/Government.html">Government </a>
                         </div>
                     </div>
 
