--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                         <a class="nav-link click-scroll" href="#section_2">Capabilities <i
                                 class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Cloud services</a>
-                            <a class="dropdown-item" href="#">Automation and Dev-ops practices</a>
-                            <a class="dropdown-item" href="#">IT Infrastructure services</a>
-                            <a class="dropdown-item" href="#">Enterprise software Solutions</a>
-                            <a class="dropdown-item" href="#">Data Analytics & Engineering</a>
-                            <a class="dropdown-item" href="#">Digital Transformation</a>
+                            <a class="dropdown-item" href="capabilities/cloudservices.html">Cloud services</a>
+                            <a class="dropdown-item" href="capabilities/AutomationandDevops.html">Automation and Dev-ops practices</a>
+                            <a class="dropdown-item" href="capabilities/ITInfrastructureservices.html">IT Infrastructure services</a>
+                            <a class="dropdown-item" href="capabilities/Enterprisesoftwaresolutions.html">Enterprise software Solutions</a>
+                            <a class="dropdown-item" href="capabilities/DataAnalyticsEngineering.html">Data Analytics & Engineering</a>
+                            <a class="dropdown-item" href="capabilities/DigitalTransformation.html">Digital Transformation</a>
                         </div>
                     </div>
 
@@ -90,13 +90,12 @@
                         <a class="nav-link click-scroll" href="#section_4">Industries <i
                                 class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#">Technology</a>
-                            <a class="dropdown-item" href="#">Tele communications & Media</a>
-                            <a class="dropdown-item" href="#">Health care</a>
-                            <a class="dropdown-item" href="#">Energy & Utility</a>
-                            <a class="dropdown-item" href="#">Health Care & Pharma</a>
-                            <a class="dropdown-item" href="#">BFSI</a>
-                            <a class="dropdown-item" href="#">Government </a>
+                            <a class="dropdown-item" href="Industries/Technology.html">Technology</a>
+                            <a class="dropdown-item" href="Industries/Telecommunications.html">Tele communications & Media</a>
+                            <a class="dropdown-item" href="Industries/Healthcare.html">Health care</a>
+                            <a class="dropdown-item" href="Industries/EnergyUtility.html">Energy & Utility</a>
+                            <a class="dropdown-item" href="Industries/Bankingservices.html">BFSI</a>
+                            <a class="dropdown-item" href="Industries/Government.html">Government </a>
                         </div>
                     </div>
 
