pushed all pages of services

--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
                         <a class="nav-link click-scroll" href="#section_3">Services <i
                                 class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="TechnologyService.html">Technology Staffing as Service (TSaS)</a>
-                            <a class="dropdown-item" href="#">IT Management as Service (IMaS)</a>
-                            <a class="dropdown-item" href="#">Cloud Management as Service (CMaS)</a>
-                            <a class="dropdown-item" href="#">Implementation & support solutions</a>
-                            <a class="dropdown-item" href="#">Digital operations & Transformation Consulting</a>
-                            <a class="dropdown-item" href="#">Product Development</a>
+                            <a class="dropdown-item" href="services/TechnologyService.html">Technology Staffing as Service (TSaS)</a>
+                            <a class="dropdown-item" href="services/ITManagement.html">IT Management as Service (IMaS)</a>
+                            <a class="dropdown-item" href="services/CloudManagement.html">Cloud Management as Service (CMaS)</a>
+                            <a class="dropdown-item" href="services/DigitalOperation.html">Digital Transformation Consulting</a>
+                            <a class="dropdown-item" href="services/ProductManagement.html">Software Development & Support Solutions</a>
                         </div>
                     </div>
 
