--- a/Industries/Healthcare.html
+++ b/Industries/Healthcare.html
@@ -78,12 +78,11 @@
                     <div class="nav-item dropdown">
                         <a class="nav-link click-scroll" href="#section_3">Services <i class="symbol bi bi-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="../TechnologyService.html">Technology Staffing as Service (TSaS)</a>
-                            <a class="dropdown-item" href="ITManagement">IT Management as Service (IMaS)</a>
-                            <a class="dropdown-item" href="CloudManagement">Cloud Management as Service (CMaS)</a>
-                            <a class="dropdown-item" href="ImplementationSupport">Implementation & support solutions</a>
-                            <a class="dropdown-item" href="DigitalOperations">Digital operations & Transformation Consulting</a>
-                            <a class="dropdown-item" href="ProductDevelopment">Product Development</a>
+                            <a class="dropdown-item" href="../services/TechnologyService.html">Technology Staffing as Service (TSaS)</a>
+                            <a class="dropdown-item" href="../services/ITManagement.html">IT Management as Service (IMaS)</a>
+                            <a class="dropdown-item" href="../services/CloudManagement.html">Cloud Management as Service (CMaS)</a>
+                            <a class="dropdown-item" href="../services/DigitalOperation.html">Digital Transformation Consulting</a>
+                            <a class="dropdown-item" href="../services/ProductManagement.html">Software Development & Support Solutions</a>
                         </div>
                     </div>
 
