--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_7">Contact</a>
+                        <a class="nav-link click-scroll" href="contactus.html">Contact</a>
                     </li>
 
 
