--- a/capabilities/Enterprisesoftwaresolutions.html
+++ b/capabilities/Enterprisesoftwaresolutions.html
@@ -103,7 +103,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_7">Contact</a>
+                        <a class="nav-link click-scroll" href="../contactus.html">Contact</a>
                     </li>
 
 
